Name:                flnv
Version:             0.0
Description:         Four Letters; No Vowel
License:             BSD3
License-file:        LICENSE
Author:              Nelson Elhage
Maintainer:          nelhage@mit.edu
Build-Depends:       base, mtl, haskell98, parsec

Exposed-Modules:     FLNV
ghc-options:         -fglasgow-exts

Executable:          repl
Main-is:             Repl.hs
ghc-options:         -fglasgow-exts
